--- a/MSE.ipynb
+++ b/MSE.ipynb
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mean square error; Checking weather sample mean is minimizing MSE:\n",
+    "Mean square error; \n",
     "$$ MSE = \\frac{1}{N} \\sum_1^N(x_i - \\bar{x})^2 $$\n",
     "Where N is number of samples from some distribution. <br />\n",
     "$x_i$ is mean of each sample <br />\n",
     "$\\bar{x}$ is real value of estimated parameter <br /> \n",
-    "Here: Taking samples independenty from Gaussian distribution"
+    "Here: Taking samples independenty from Gaussian distribution and testing two variance approximators"
    ]
   },
   {
