--- a/MSE.ipynb
+++ b/MSE.ipynb
@@ -58,7 +58,7 @@
     "    sum = 0\n",
     "    for i in x:\n",
     "        sum += (i - x.mean())**2\n",
-    "    return (sum/Npoints, sum/(Npoints-1))\n",
+    "    return (sum/Npoints, sum/(Npoints+1))\n",
     "\n",
     "def MeanSquareError(realParam, Ntests, mu = 0, var = 1, Npoints = 1000):\n",
     "    MSE_bias = 0\n",
